# CodeMangler

./: .gitignore  README.md  build_debug_console.bat  build_exe.bat  pyproject.toml  run.bat  run_roundtrip_test.bat  run_ui.bat  setup.bat
app/: __init__.py  cli.py  config.py  main.py
app/anonymization/: code_anonymizer.py  fake_value_generator.py  text_anonymizer.py
app/code/: identifier_extractor.py  parser.py  scope_analyzer.py  tree_sitter_parser.py
app/detection/: custom_patterns.py  entropy_detector.py  findings.py  language_detector.py  pii_detector.py  secret_detector.py
app/input/: file_walker.py  ignore_rules.py  loader.py
app/mapping/: map_reader.py  map_writer.py  restore_engine.py  schema.py
app/security/: map_encryption.py  safe_logger.py
app/tests/: conftest.py  test_cli_sanitize_restore_roundtrip.py  test_identifier_catalog.py  test_identifier_rename.py  test_keyword_safety_fuzz.py  test_loader.py  test_restore.py  test_secret_detection.py  test_settings_ui.py
app/ui/: main_window.py  resource_paths.py  run_ui.py  styles.py  user_settings.py  widgets.py  workers.py
app/ui/panels/: about_panel.py  file_panel.py  restore_file_panel.py  restore_text_panel.py  settings_panel.py  text_panel.py
scripts/: roundtrip_test.py
