[project]
name = "codemangler"
version = "1.1.2.0"
description = "Local-first tool to detect and sanitize sensitive information in code/text, with reversible restore."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pathspec>=0.12",
    "faker>=24.0",
    "orjson>=3.9",
    "detect-secrets>=1.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
pii  = ["presidio-analyzer>=2.2", "spacy>=3.7"]
llm  = ["httpx>=0.27"]
code = ["tree-sitter>=0.21", "tree-sitter-language-pack>=0.2"]
ui   = ["pyside6>=6.6"]
dev  = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100"]

[project.scripts]
codemangler = "app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
